--- a/packages/fronted/pages/panels/Workspace.module.css
+++ b/packages/fronted/pages/panels/Workspace.module.css
@@ -76,12 +76,36 @@
 .content_create_content{
     width: 100%;
     height: 600px;
-    background-color: green;
+    border: 1px dashed #bbb;
 }
 
 .navigation {
     width     : 100px;
-    background: green;
+    background: rebeccapurple;
 }
 
 .drag_source_element {}
+
+.view_panel{
+    width: calc(100%-10) ;
+    height: 100px;
+    background: #fff;
+    padding: 0;
+    position: relative;
+    margin: 10px;
+    cursor: move;
+    line-height: 30px;
+}
+.view_panel_active{
+    border: 1px rgb(219, 60, 0) solid;
+}
+
+.view_panel_edit_bar{
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 100px;
+    height: 26px;
+    background: rgb(219, 60, 0);
+    border-top-left-radius: 8px;
+}
