--- a/packages/fronted/pages/component/Text/Text.module.css
+++ b/packages/fronted/pages/component/Text/Text.module.css
@@ -1,5 +1,17 @@
-.text{
-    width: 300px;
-    height: 20px;
-    border: 1px solid red;
+.inputElement{
+    background: #0000;
+    cursor: text;
+    display: inline-block;
+    padding: 0 8px;
+    transition: all .15s cubic-bezier(.23,1,.32,1) 0ms;
+    word-break: break-all;
+    width: 98%;
+    height: 30px;
+    border: none;
+    margin: 10px;
+}
+
+.inputElement:focus{
+    border:1px solid gray;
+    border-radius: 4px;
 }
